Rename config file

--- a/sheet-mapper/index.html
+++ b/sheet-mapper/index.html
@@ -8,7 +8,7 @@
     <title>Sheet Mapper</title>
     <meta name="description" content="Plot points from a spreadsheet to a map">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <script src="./sheet-config.js"></script>
+    <script src="config.js"></script>
     <script src="https://api.mapbox.com/mapbox-gl-js/v1.10.0/mapbox-gl.js"></script>
     <link href="https://api.mapbox.com/mapbox-gl-js/v1.10.0/mapbox-gl.css" rel="stylesheet" />
     <script src='https://cdnjs.cloudflare.com/ajax/libs/tabletop.js/1.5.1/tabletop.min.js'></script>
